--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Home - German Learning App{% endblock %}
+
+{% block content %}
     <h2>Login</h2>
     <form method="POST">
         <input type="email" name="email" placeholder="Email" required>
@@ -15,5 +12,4 @@
         <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up</a></p>
-</body>
-</html>
+{% endblock %}
