--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Home - German Learning App{% endblock %}
+
+{% block content %}
     <h2>Sign Up</h2>
     <form method="POST">
         <input type="text" name="username" placeholder="Username" required>
@@ -17,5 +14,4 @@
         <button type="submit">Sign Up</button>
     </form>
     <p>Already have an account? <a href="{{ url_for('auth.login') }}">Login</a></p>
-</body>
-</html>
+{% endblock %}
