--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
   </nav>
 
   <!-- Main Content -->
-  <div class="container mt-4">
+  <div class="container mt-4 content">
     {% block content %}{% endblock %}
   </div>
 
