--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,7 @@
   </nav>
 
   <!-- Main Content (pushed down so it's not hidden behind the fixed navbar) -->
-  <div class="container mt-5 content">
+  <div class="container mt-5 content d-flex flex-column align-items-center">
     {% block content %}{% endblock %}
   </div>
 
